tests/ui/parse_empty_try_from_os.stderr
error: cannot omit parser function name with `try_from_os_str`
  --> $DIR/parse_empty_try_from_os.rs:14:23
   |
14 |     #[structopt(parse(try_from_os_str))]
   |                       ^^^^^^^^^^^^^^^
